@@ -3,6 +3,10 @@
 	* GNOME_StickyNotesApplet.xml.in, Makefile.am:
 	  Removed redundant GNOME_StickyNotesApplet.xml.in file and added
 	  GNOME_StickyNotesApplet.xml file. Modified Makefile.am to reflect.
+	* stickynotes.c, stickynotes_applet_callbacks.c:
+	  Fixed bug #109467: Note positions are no longer forgotten.
+	  Fixed bug #109469: About window no longer closes early.
+	  Fixed bug #109470: Preferences dialog no longer crashes applet.
 
 2003-03-27  Padraig O'Briain  <padraig.obriain@sun.com>
 
